增加swiftmap方便获取类型值